@@ -2,3 +2,4 @@ CSN-asim-6
 CSN-asim-7
 CSN-asimcore-8
 CSN-asimcore-9
+CSN-asimcore-11
