@@ -160,3 +160,15 @@ Directory etc
 Changed asimcore repository location from .../svn/asim to .../asim/asimcore
 
 Joel
+
+----------
+emer        Date: Wed Nov  8 17:15:19 EST 2006  CSN: CSN-asimcore-11
+                  Wed Nov  8 22:15:19 UTC 2006
+
+
+Directory libperl/Asim/lib/Asim/Workspace
+ Template.pm               Locally Modified           10 
+
+Fixed up template creation for new workspaces.
+
+Joel
